package FeedBack;
syntax = "proto3";

message IntraReport {
	required string userId = 1;
	required string intraCrc32 = 2;
	required int32 intraInterval = 3;
	required int32 closeWhenDelay = 4;
}

message RequestImage {
	required string userId = 1;
	required int32 imageQuality = 2;
	required int32 lastInterval = 3;
}
